continue syncing with wix
