# src/main/kotlin/ch/fitnesslab/product/infrastructure/ProductRepository.kt
@@ -6,14 +6,6 @@ import java.util.*
 
 @Repository
 interface ProductRepository : JpaRepository<ProductVariantEntity, UUID> {
-    fun findProductByWixId(wixId: String): ProductVariantEntity? = findAll()
-        .firstOrNull { product -> isWixProductWithWixId(product, wixId) }
 
-    private fun isWixProductWithWixId(
-        product: ProductVariantEntity?,
-        id: String
-    ): Boolean = product?.linkedPlatforms?.any {
-        it.platformName == "wix" && it.idOnPlatform == id
-    } == true
 
 }
